fix_messages.scss_&__icons.text-align

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -21,7 +21,7 @@
         }
         &__icons {
           width: 60px;
-          text-align: end;
+          text-align: right;
           &--icon {
             color: #ffffff;
           }
